# companies-house-project

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  makefile  mkdocs.yml  mytest.py  names.txt  pyproject.old  pyproject.toml  setup.cfg
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml
ARCHIVED/: APIResponse Class.py  CompaniseHouseAPI Class.py  InsuranceCompanyFinder Class.py  ch_core.py  get_companies_house_data.py
chtools/: README.md  __init__.py  setup.py
chtools/ch_basics/: APIResponse.py  CompaniesHouseAPI.py  CompanyData.py  Config.py  RateLimiter.py  RegisteredOffice.py  __init__.py  get_endpoint_data.py
chtools/ch_utils/: __init_.py  explore_nested_json.py  get_api_key.py  play_sound_until_input.py  setup_logging.py
companies_house/: __init__.py  cli.py  setup.py
companies_house/CH_BASICS/: APIResponse Class.py  CH_IMPORTS.py  CompanyData Class.py  Config Class.py  HOWTO IMPORT CODE FROM  CH_PACKAGE.ipynb  RegisteredOffice Class.py  get_company_detailspy
companies_house/CH_FUNCTIONS/: RateLimiter Class.py  get_api_key.py  robust_nested_json_to_multi_df(.py  setup_logging.py
docs/: CH_PACKAGE,md  ENDPOINTS.md  README.md  api.md  installation.md  usage.md
notebooks/: Importing Modules in Jupyter Notebooks.iipynb
notebooks/basic companies data/: GET DATA FROM ENDPOINTS.ipynb  INSURANCE COMPANIES BASIC DATA.ipynb  LIST OF COMPANY NAMES.ipynb  notebook to test imports.ipynb
notebooks/basic companies data/insurance_companies_data/: LOG.txt  insurance_companies_20250115_123815_scubamut.csv  insurance_company_names_20250115_134705_scubamut.txt
notebooks/examples/: COMPANY BASICS EXAMPLE.ipynb  company_basics_example.ipynb  simple colab test.ipynb
other python examples/: import companies_house.py  import example.py
tests/: __init__.py  test_companies_house.py
