[tool.poetry]
name = "companies-house-project"
version = "0.1.0"
homepage = "https://github.com/scubamut/companies-house-project"
description = "companies house api to extract companies data."
authors = ["daveg <scubamut@gmail.com>"]
readme = "README.md"
license = "MIT"
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
]
packages = [
    { include = "chtools" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
requests = "^2.31.0"
pandas = "^2.2.0"
pydantic = "^2.6.1"
click = "^8.1.7"
six = "^1.17.0"
pytest = "^8.3.4"
urllib3 = "^2.3.0"

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
flake8-docstrings = "^1.7.0"
mypy = "^1.8.0"
pytest-cov = "^4.1.0"
tox = "^4.12.1"
virtualenv = "^20.25.0"
pre-commit = "^3.6.0"
toml = "^0.10.2"
bump2version = "^1.0.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-include-markdown-plugin = "^6.0.4"
mkdocs-material = "^9.5.3"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}
mkdocs-material-extensions = "^1.3.1"
mkdocs-autorefs = "^0.5.0"

[tool.poetry.scripts]
companies-house-project = 'chtools.cli:main'

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"